feat: support for intent, events and buttons requests (#67)
