# docs/docs/static/swagger.yaml
@@ -131,6 +131,22 @@ definitions:
       voiceflowAgentTesterConfig:
         $ref: '#/definitions/tests.VoiceflowAgentTesterConfig'
     type: object
+  tests.IntentEntity:
+    properties:
+      name:
+        type: string
+      value:
+        type: string
+    type: object
+  tests.IntentRequest:
+    properties:
+      entities:
+        items:
+          $ref: '#/definitions/tests.IntentEntity'
+        type: array
+      name:
+        type: string
+    type: object
   tests.Interaction:
     properties:
       agent:
@@ -177,9 +193,16 @@ definitions:
     type: object
   tests.User:
     properties:
+      event:
+        type: string
+      intent:
+        $ref: '#/definitions/tests.IntentRequest'
       text:
         type: string
       type:
+        type: string
+      value:
+        description: Used for button label
         type: string
     type: object
   tests.UserInfo:
